<resources>
    <string name="app_name">부산 놀러와</string>

    <string name="language_korean">한국어</string>
    <string name="language_selection">자주 사용하는 언어를 선택해주실래요?</string>

    <string name="home">홈</string>
    <string name="profile">마이 페이지</string>
    <string name="setting">설정</string>
    <string name="things_to_do">즐길거리</string>

    <string name="notice">공지사항</string>
    <string name="setting_language">언어 설정</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawl">회원탈퇴</string>

    <string name="home_title">이달의 콘텐츠</string>
    <string name="my_coupon">내 쿠폰</string>
    <string name="my_coupon_usage_history">쿠폰 사용 내역</string>
    <string name="my_travel_history">내 여행 여정</string>
    <string name="my_review">내 리뷰 모아보기</string>

    <string name="update">다른 언어(일본어, 중국어 등)는\\n 추후에 업데이트될 예정입니다.</string>
    <string name="write_review">리뷰 쓰기</string>
    <string name="star_rating">별점 매기기</string>

    <string name="language_english">English</string>

    <string name="kpop_dance">K-POP 댄스 원데이 클래스</string>
    <string name="cooking">한식 원데이 쿠킹 클래스</string>
    <string name="hanbok">한복 체험</string>
    <string name="looking_all">전체순으로 보기</string>

    <string name="kpop_description">K-pop 댄스 클래스 한국의 대표적인 음악 장르인 K-pop의 댄스를 직접 배우고 체험할 수 있는 특별한 활동입니다. K-pop 댄스 강사들이 직접 가르치며, K-pop의 대표적인 노래와 댄스 무대를 배우고 연습할 수 있는 시간을 제공합니다. 외국인들은 K-pop 아이돌의 댄스를 배우고 그들과 같은 퍼포먼스를 할 수 있는 기회를 얻게 됩니다.</string>
</resources>