<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.pknu.busannollerwar.presentation.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.profile.ProfileFragment"
        android:background="@color/language_selection_background">

        <TextView
            android:id="@+id/my_page_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        
        <LinearLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="26dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/my_page_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#E0E0E0">
            
            <FrameLayout
                android:id="@+id/user_profile_frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_profile_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="119dp"
                android:layout_marginEnd="111dp"
                android:background="@color/black"
                />


            <ImageView
                android:id="@+id/user_icon_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="119dp"
                android:layout_marginEnd="111dp"
                android:layout_gravity="bottom|end"
                android:src="@drawable/modify_icon"
                />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="119dp"
                android:layout_marginEnd="111dp"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="sresersr님"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/profile_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white">

            <Button
                android:id="@+id/my_coupon_btn"
                android:layout_width="297dp"
                android:layout_height="62dp"
                android:text="@string/my_coupon"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_marginTop="27dp"
                android:background="@drawable/my_page_button"/>

            <Button
                android:id="@+id/my_coupon_usage_history_btn"
                android:layout_width="297dp"
                android:layout_height="62dp"
                android:text="@string/my_coupon_usage_history"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_marginTop="27dp"
                android:background="@drawable/my_page_button"/>

            <Button
                android:id="@+id/my_travel_btn"
                android:layout_width="297dp"
                android:layout_height="62dp"
                android:text="@string/my_travel_history"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_marginTop="27dp"
                android:background="@drawable/my_page_button"/>


            <Button
                android:id="@+id/my_reiview_btn"
                android:layout_width="297dp"
                android:layout_height="62dp"
                android:text="@string/my_review"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_marginTop="27dp"
                android:background="@drawable/my_page_button"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>