<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.setting.languagesetting.LanguageSettingFragment"
        android:background="@color/language_selection_background">

       <TextView
           android:id="@+id/language_setting_tv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/setting_language"
           android:textSize="24sp"
           android:textStyle="bold"
           android:textColor="@color/black"
           android:layout_marginTop="20dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/language_setting_tv"
            app:layout_constraintBottom_toBottomOf="parent">

            <RadioGroup
                android:id="@+id/language_radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="26dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/korean_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_korea"
                    android:textSize="14sp"/>

                <RadioButton
                    android:id="@+id/english_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_english"
                    android:textSize="14sp"/>
                
            </RadioGroup>
            
          <TextView
              android:id="@+id/udpate_tv"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/update"
              android:textSize="14sp"
              android:textColor="#B7B7B7"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              />




        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>